--- a/00_List.html
+++ b/00_List.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles2.css?v=241015a">
+    <link rel="stylesheet" href="styles.css?v=241015a">
 
 </head>
 
