--- a/01_Nersing.html
+++ b/01_Nersing.html
@@ -9,7 +9,7 @@
 <body style="background-color:rgb(0, 40, 112)">
 
     <div style="margin: auto; max-width : 1000px;">
-        <img src="G_Bg01.png" style="max-width: 100%; height: auto;">
+        <img src="Bg04.png" style="max-width: 100%; height: auto;">
     </div>
 
     
