--- a/02_Department of  Architecture.html
+++ b/02_Department of  Architecture.html
@@ -2,14 +2,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles2.css?v=241015a">
+    <link rel="stylesheet" href="styles.css?v=241015a">
 
 </head>
 
 <body style="background-color:rgb(0, 40, 112)">
 
     <div style="margin: auto; max-width : 1000px;">
-        <img src="G_Bg01.png" style="max-width: 100%; height: auto;">
+        <img src="Bg04.png" style="max-width: 100%; height: auto;">
     </div>
 
     
