--- a/00_List.html
+++ b/00_List.html
@@ -23,7 +23,7 @@
         경영학과
     </div>
     
-    <div class="Note3" onclick="location.href='12_Theology.html'">
+    <div class="Note3" onclick="location.href='04_Department of Global Korean Studies.html'">
         글로벌한국학과
     </div>
     
