--- a/01_Nersing.html
+++ b/01_Nersing.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css?v=241015a">
-
+    <meta name="color-scheme" content="light only"/>
+	<meta name="supported-color-schemes" content="light"/>
 </head>
 
 <body style="background-color:rgb(0, 40, 112)">
