--- a/12_Theology.html
+++ b/12_Theology.html
@@ -64,14 +64,12 @@
     </div>
 
     <div class="Note2">
-        <div><span class="brackets">[학과 학생회 활동]</span></div>
-        <div>헤이븐, 하늘바래기, 여신학과 학생회, 1000명 선교사회</div>
-        <br>
-        <div><span class="brackets">[관련 교양]</span></div>
-        <div>종교와 과학, 현대문화와 선교, 예배와 교회음악, 기독교 철학 등</div>
-        <br>
-        <div><span class="brackets">[관련 비교과 프로그램]</span></div>
-        <div>
+        <div><span class="brackets">[ 학과 학생회 활동 ]</span></div>
+        <div class="mb">헤이븐, 하늘바래기, 여신학과 학생회, 1000명 선교사회</div>
+        <div><span class="brackets">[ 관련 교양 ]</span></div>
+        <div class="mb">종교와 과학, 현대문화와 선교, 예배와 교회음악, 기독교 철학 등</div>
+        <div><span class="brackets">[ 관련 비교과 프로그램 ]</span></div>
+        <div class="mb">
             신학숙(STAY) 프로그램 운영(1,2학년), 학과 코디테이터 사역을 통한 교내선교실습(2학년), 지역교회 사역을 통한 목회실습(3,4학년), 창조과학 탐사(1학년), 재림연수원 입소교육 프로그램(2학년), 해외선교실습(교과, 비교과), 성지 및 재림교회 유적지 탐사 프로그램, 교환학생 프로그램
         </div>
     </div>
