--- a/01_Nersing.html
+++ b/01_Nersing.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="SubTitle">
-        전인적 간호인재 양성으로 미래를 열어가는 간호대학
+        전인적 간호인재 양성으로<br>미래를 열어가는 간호대학
     </div>
 
     <div class="d1">
