--- a/index.html
+++ b/index.html
@@ -33,8 +33,14 @@
     </div>
 
     <div class="Note1" onclick="location.href='00_List.html'">
-        삼육대학교 학과소개
+        삼육대학교 학과안내(Web)
     </div>
+
+    <div class="Note1"
+        onclick="window.open('https://drive.google.com/file/d/1hSkb67Askdo6r1t-Ae3i3xHlHPXnGNlC/view?usp=drive_link');">
+        삼육대학교 학과소개(pdf)
+    </div>
+
 
     
     
