--- a/00_List_test.html
+++ b/00_List_test.html
@@ -41,7 +41,7 @@
     </div>
 
     <script>
-        const url = 'your-file.pdf';  // PDF 파일 경로 설정
+        const url = '1.pdf';  // PDF 파일 경로 설정
 
         let pdfDoc = null,  // PDF 문서 객체
             pageNum = 1,     // 현재 페이지
